2004-05-26  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* Changes.ru: update
	* doc/FAQ.ru: add Id

2004-05-24  Andrey Slusar <rusfidogate@users.sourceforge.net>
	
	* version.h: update version number to 5.1.1ds-rc1
	* src/areafix/areafix.c: add key for NEW command

2004-04-18  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* packages/freebsd: update

2004-04-15  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* scripts/nodelist/nl-autoupd.in: remove $IFINDEX

2004-03-30  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/rfcheader.c: fix RECODE_ALL_RFC
	* src/common/getopt.c: fix warning
	* src/gate/ftninpost.c: fix warning
	* src/tick/ftntick.c: fix warning

2004-03-29  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/arafix/areafix.c: fix crashing ftnafutil if
	    rulesfile is broken

2004-03-24  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/areafix/areafix.c: remove unnecessary '\n' if
	    enable AFSEND_ECHO_STATUS

2004-03-16  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* packages/freebsd: update

2004-03-12  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/areafix/areafix.c: fix cmd_listall finding
	    dupe lines in lists (thanks to Anton Leer)
	* TODO.rus: update

2004-03-04  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/msgid.c: fix trap ftn2rfc if bad
	    REPLY and use dbc_history

2004-02-26  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/histdb.c: fix writing fido_msgid
	* src/gate/ftn2rfc.c: remove '(', ')' in header
	    X-Comment-To(see Changes)
	* src/common/packet.c: add FIX_BAD_PKT_YEAR

2004-02-25  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/packet.c: fix the processing of the bad
	    packets
	* src/areafix/ftnafutil.c: fix the problem with removing
	    of nodes during unsubscribe

2004-02-22  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/msgid.c: not write mail to msgid
	    history