@@ -4,7 +4,7 @@
 # Created: 1993-05-16
 # Public domain
 
-# $Id: mkinstalldirs,v 1.10 2004/05/30 22:54:05 rusfidogate Exp $
+# $Id: mkinstalldirs,v 1.11 2004/06/06 01:22:06 rusfidogate Exp $
 
 errstatus=0
 
