@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway software UNIX Mail/News <-> FIDO NetMail/EchoMail
  *
- * $Id: version.h,v 1.4 2004/05/30 22:54:05 rusfidogate Exp $
+ * $Id: version.h,v 1.5 2004/06/06 01:22:06 rusfidogate Exp $
  *
  * Global version number, patch level
  *****************************************************************************/
@@ -10,6 +10,6 @@
 #define VERSION_MAJOR	5
 #define VERSION_MINOR	1
 #define PATCHLEVEL	1
-#define EXTRAVERSION	"ds-rc2"
+#define EXTRAVERSION	"ds-rc3"
 
 #define STATE		"stable"
