@@ -1,3 +1,9 @@
+2004-06-06  Andrey Slusar <rusfidogate@users.sourceforge.net>
+
+	* version.h: update version number to 5.1.1ds-rc3
+	* src/common/getopt.c: fix args
+	* src/common/misc.c: fix and rewrite str_append()
+
 2004-05-26  Andrey Slusar <rusfidogate@users.sourceforge.net>
 
 	* Changes.ru: update
